--- a/4/package.json
+++ b/4/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "hbs": "^4.2.0",
