--- a/4/package.json
+++ b/4/package.json
@@ -1,7 +1,7 @@
 {
   "name": "4",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
